cmake_minimum_required(VERSION 3.27)
project(DevSuperiorLinguagemC C)

set(CMAKE_C_STANDARD 11)

add_executable(DevSuperiorLinguagemC main.c
        MatrizesEmC.c
        MatrizesEmC.c
        SolucaoRetangulo.c
        SolucaoIdade.c
        EntradaDeDadosEmC.c
        EstruturaCondicional.c
        EstruturaDoWhile.c
        EstruturaEnquanto.c
        EstruturaFor.c
        PrimeiroPassosEmC.c
        ProcessamentoCastingEmC.c
        SaidaDeDadosEmC.c
        SolucaoIdade.c
        SolucaoNotas.c
        SolucaoBaskara.c
        SolucaoMenorDeTres.c
        SolucaoCrescente.c
        SolucaoMediaIdade.c
        cmake-build-debug/PRoblemaTabuada.c
        ProblemaSomaImpares.c
        ProblemaSomaImpares.c
        ProblemaMegativos.c
        ProblemaSomaVetor.c
        ProblemasAlturas.c
)
